--- a/jenkinsfile
+++ b/jenkinsfile
@@ -69,6 +69,9 @@ podTemplate(
                 checkout scm
                 COMMIT_HEAD_TAG = sh(returnStdout: true, script: "git tag -l --points-at HEAD | tail -1").trim()
                 echo 'Head Tag:' + COMMIT_HEAD_TAG
+                if (COMMIT_HEAD_TAG == "") {
+                    error "No Git Version at Master Head"
+                }
                 echo 'Branch Name:' + env.BRANCH_NAME
                 echo 'Check Branch:'
                 if (env.BRANCH_NAME == 'master') {
